--- a/infra/production/docker-compose.yml
+++ b/infra/production/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - kibana
       - logstash
       - rest-api
-      - frontend
+      # - frontend
     restart: always
 
   reels-parser:
@@ -51,7 +51,7 @@ services:
       - kibana
       - logstash
       - rest-api
-      - frontend
+      # - frontend
     restart: always
 
   short-parser:
@@ -72,7 +72,7 @@ services:
       - kibana
       - logstash
       - rest-api
-      - frontend
+      # - frontend
     restart: always
 
   likee-parser:
@@ -93,7 +93,7 @@ services:
       - kibana
       - logstash
       - rest-api
-      - frontend
+      # - frontend
     restart: always
 
   # frontend:
