добавил фильрацию для вывода пользователей, видео, аккаунтов, заготовил страницу статистики

--- a/services/web/package.json
+++ b/services/web/package.json
@@ -13,11 +13,13 @@
     "@telegram-apps/sdk": "^3.11.8",
     "@telegram-apps/sdk-react": "^3.3.9",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
     "react-router-dom": "^7.9.3",
