--- a/services/rest/requirements.txt
+++ b/services/rest/requirements.txt
@@ -25,17 +25,21 @@ mdurl==0.1.2
 orjson==3.10.18
 passlib==1.7.4
 pika==1.3.2
+playwright==1.55.0
+playwright-stealth==1.0.6
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+pyee==13.0.0
 Pygments==2.19.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.7
+setuptools==80.9.0
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.41
