--- a/services/parsers/tiktok/requirements.txt
+++ b/services/parsers/tiktok/requirements.txt
@@ -16,6 +16,7 @@ multidict==6.6.3
 pamqp==3.3.0
 playwright==1.53.0
 propcache==0.3.2
+playwright-stealth==2.0.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
