--- a/.gitverse/workflows/deploy.yaml
+++ b/.gitverse/workflows/deploy.yaml
@@ -23,40 +23,40 @@ jobs:
 
     env:
       # Postgres
-      SN_POSTGRES_USER: ${{ secrets.SN_POSTGRES_USER }}
-      SN_POSTGRES_PASSWORD: ${{ secrets.SN_POSTGRES_PASSWORD }}
-      SN_POSTGRES_DB: ${{ secrets.SN_POSTGRES_DB }}
-      SN_POSTGRES_PORT: ${{ secrets.SN_POSTGRES_PORT }}
-      SN_POSTGRES_CONTAINER: ${{ secrets.SN_POSTGRES_CONTAINER }}
+      COS_POSTGRES_USER: ${{ secrets.COS_POSTGRES_USER }}
+      COS_POSTGRES_PASSWORD: ${{ secrets.COS_POSTGRES_PASSWORD }}
+      COS_POSTGRES_DB: ${{ secrets.COS_POSTGRES_DB }}
+      COS_POSTGRES_PORT: ${{ secrets.COS_POSTGRES_PORT }}
+      COS_POSTGRES_CONTAINER: ${{ secrets.COS_POSTGRES_CONTAINER }}
 
       # RabbitMQ
-      SN_RABBITMQ_USER: ${{ secrets.SN_RABBITMQ_USER }}
-      SN_RABBITMQ_PASSWORD: ${{ secrets.SN_RABBITMQ_PASSWORD }}
-      SN_RABBITMQ_PORT: ${{ secrets.SN_RABBITMQ_PORT }}
-      SN_RABBITMQ_MANAGEMENT_PORT: ${{ secrets.SN_RABBITMQ_MANAGEMENT_PORT }}
-      SN_RABBITMQ_CONTAINER: ${{ secrets.SN_RABBITMQ_CONTAINER }}
-      SN_RABBITMQ_HOST: ${{ secrets.SN_RABBITMQ_HOST }}
+      COS_RABBITMQ_USER: ${{ secrets.COS_RABBITMQ_USER }}
+      COS_RABBITMQ_PASSWORD: ${{ secrets.COS_RABBITMQ_PASSWORD }}
+      COS_RABBITMQ_PORT: ${{ secrets.COS_RABBITMQ_PORT }}
+      COS_RABBITMQ_MANAGEMENT_PORT: ${{ secrets.COS_RABBITMQ_MANAGEMENT_PORT }}
+      COS_RABBITMQ_CONTAINER: ${{ secrets.COS_RABBITMQ_CONTAINER }}
+      COS_RABBITMQ_HOST: ${{ secrets.COS_RABBITMQ_HOST }}
 
       # ClickHouse
-      SN_CLICKHOUSE_PORT_HTTP: ${{ secrets.SN_CLICKHOUSE_PORT_HTTP }}
-      SN_CLICKHOUSE_PORT_NATIVE: ${{ secrets.SN_CLICKHOUSE_PORT_NATIVE }}
-      SN_CLICKHOUSE_CONTAINER: ${{ secrets.SN_CLICKHOUSE_CONTAINER }}
+      COS_CLICKHOUSE_PORT_HTTP: ${{ secrets.COS_CLICKHOUSE_PORT_HTTP }}
+      COS_CLICKHOUSE_PORT_NATIVE: ${{ secrets.COS_CLICKHOUSE_PORT_NATIVE }}
+      COS_CLICKHOUSE_CONTAINER: ${{ secrets.COS_CLICKHOUSE_CONTAINER }}
 
       # Elastic / Kibana / Logstash
-      SN_ELASTICSEARCH_PORT: ${{ secrets.SN_ELASTICSEARCH_PORT }}
-      SN_ELASTICSEARCH_CONTAINER: ${{ secrets.SN_ELASTICSEARCH_CONTAINER }}
+      COS_ELASTICSEARCH_PORT: ${{ secrets.COS_ELASTICSEARCH_PORT }}
+      COS_ELASTICSEARCH_CONTAINER: ${{ secrets.COS_ELASTICSEARCH_CONTAINER }}
       ELASTIC_PASSWORD: ${{ secrets.ELASTIC_PASSWORD }}
-      SN_KIBANA_PORT: ${{ secrets.SN_KIBANA_PORT }}
-      SN_KIBANA_CONTAINER: ${{ secrets.SN_KIBANA_CONTAINER }}
+      COS_KIBANA_PORT: ${{ secrets.COS_KIBANA_PORT }}
+      COS_KIBANA_CONTAINER: ${{ secrets.COS_KIBANA_CONTAINER }}
       KIBANA_PASSWORD: ${{ secrets.KIBANA_PASSWORD }}
-      SN_LOGSTASH_PORT: ${{ secrets.SN_LOGSTASH_PORT }}
-      SN_LOGSTASH_CONTAINER: ${{ secrets.SN_LOGSTASH_CONTAINER }}
-      SN_LOGSTASH_HOST: ${{ secrets.SN_LOGSTASH_HOST }}
+      COS_LOGSTASH_PORT: ${{ secrets.COS_LOGSTASH_PORT }}
+      COS_LOGSTASH_CONTAINER: ${{ secrets.COS_LOGSTASH_CONTAINER }}
+      COS_LOGSTASH_HOST: ${{ secrets.COS_LOGSTASH_HOST }}
 
       # App / misc
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-      SN_REST_API_CONTAINER: ${{ secrets.SN_REST_API_CONTAINER }}
+      COS_REST_API_CONTAINER: ${{ secrets.COS_REST_API_CONTAINER }}
       TELEGRAM_ADMIN_ID: ${{ secrets.TELEGRAM_ADMIN_ID }}
 
     steps:
