--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,26 @@ services/parsers/.env
 venv
 env
 __pycache__
+.venv312/lib/python3.12/site-packages/websockets/sync/__init__.py
+/.venv312
+/.venv
+services/rest/uploads/videos/239_oar2.jpg
+services/rest/uploads/videos/240_oar2.jpg
+services/rest/uploads/videos/241_oar2.jpg
+services/rest/uploads/videos/242_oar2.jpg
+services/rest/uploads/videos/243_oar2.jpg
+services/rest/uploads/videos/244_oar2.jpg
+services/rest/uploads/videos/245_oar2.jpg
+services/rest/uploads/videos/246_oar2.jpg
+services/rest/uploads/videos/247_oar2.jpg
+services/rest/uploads/videos/248_oar2.jpg
+services/rest/uploads/videos/249_oar2.jpg
+services/rest/uploads/videos/250_oar2.jpg
+services/rest/uploads/videos/251_oar2.jpg
+services/rest/uploads/videos/252_oar2.jpg
+services/rest/uploads/videos/253_oar2.jpg
+services/rest/uploads/videos/254_oar2.jpg
+services/rest/uploads/videos/255_oar2.jpg
+services/rest/uploads/videos/256_oar2.jpg
+services/rest/uploads/videos/257_oar2.jpg
+services/rest/uploads/videos/258_oar2.jpg
