--- a/services/parsers/shorts/requirements.txt
+++ b/services/parsers/shorts/requirements.txt
@@ -3,6 +3,7 @@ aiormq==6.8.1
 annotated-types==0.7.0
 anyio==4.9.0
 appdirs==1.4.4
+beautifulsoup4==4.14.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
 exceptiongroup==1.3.0
