--- a/infra/production/docker-compose.yml
+++ b/infra/production/docker-compose.yml
@@ -139,10 +139,10 @@ services:
     restart: always
 
     healthcheck:
-      test: ["CMD-SHELL", "curl -f https://cosmeya.dev-klick.cyou/docs# || exit 1"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+      test: ["CMD-SHELL", "curl -fsS http://localhost:8000/docs > /dev/null || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   postgres:
     image: postgres:16
