--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,25 @@ services/rest/uploads/videos/255_oar2.jpg
 services/rest/uploads/videos/256_oar2.jpg
 services/rest/uploads/videos/257_oar2.jpg
 services/rest/uploads/videos/258_oar2.jpg
+services/parsers/another_inst.py
+services/parsers/hendle_test.py
+services/parsers/huetentiktok.py
+services/parsers/instagram_cookies.json
+services/parsers/new_new_new_inst.py
+services/parsers/new_new_tiktok.py
+services/parsers/requirements.txt
+services/parsers/shorts.py
+services/parsers/test_inst_рабочий.py
+services/parsers/test_likee.py
+services/parsers/test_many_prxy.py
+services/parsers/test_prxy.py
+services/parsers/test_youtube_requests.py
+services/parsers/testLikeePlayWright.py
+services/parsers/youtubbbbb_trash.py
+services/parsers/youtube_.html
+services/parsers/youtube_with_api.py
+services/parsers/youtube_with_requests.py
+services/parsers/likee/core/parser.py
+services/parsers/reels/core/parser.py
+services/parsers/shorts/core/parser.py
+services/parsers/tiktok/core/parser.py
