--- a/services/parsers/tiktok/requirements.txt
+++ b/services/parsers/tiktok/requirements.txt
@@ -17,9 +17,8 @@ pamqp==3.3.0
 playwright==1.53.0
 propcache==0.3.2
 playwright-stealth>=1.1.0
-pydantic==2.11.7
+pydantic
 pydantic-settings==2.10.1
-pydantic_core==2.33.2
 pyee==13.0.0
 python-dotenv==1.1.1
 requests==2.32.4
